samples/_failures_safe/1761091922_586123_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e62993f.c: In function ‘graph_reset_visited’:
./samples/SAFE/__tmp_2e62993f.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
